Fix landscape footer on home screen on iPhone

--- a/root/assets/css/ucsf/full.src.css
+++ b/root/assets/css/ucsf/full.src.css
@@ -69,7 +69,7 @@ div.button a.button-light:active{
     body.mwf_os_iphone_os .menu.front {background:url(img/ucsf-background-landscape.png) no-repeat;height:320px;margin:0;border-radius:0}
     body.mwf_os_iphone_os.front #header{display:none}
     /* width:99% because 100% makes second-level lightning-touch menus horizontally scroll */
-    body.mwf_os_iphone_os div.menu.front[style~="display:block"] ~ #footer {padding:0; position:absolute; bottom:-50px; width:99%; height:50px}
+    body.mwf_os_iphone_os div.menu.front[style~="display:block"] ~ #footer {padding:0; position:absolute; margin-top:-50px; width:99%; height:50px}
 }
 @media screen and (max-width:639px) {
     .menu.front ol {
@@ -111,12 +111,12 @@ ul.two-col-list li {
 /*********************************************************
  * Sortable Options (used for Customize Home Screen)
  ********************************************************/
- div#app_order.option.ui-sortable > div {
-     background-color: #8BB;
- }
- .draggable-handle {
-     margin: 3px 5px 2px 5px;
- }
+div#app_order.option.ui-sortable > div {
+    background-color: #8BB;
+}
+.draggable-handle {
+    margin: 3px 5px 2px 5px;
+}
 
 /********************************************************
  * LIBRARY FLOORPLAN LEGEND STYLES
